src/_lini
done1
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/lib/clang/3.1/include
 /usr/local/include
 /usr/include
 /usr/include/linux
 /usr/include/c++/4.6
 /usr/include/c++/4.6/i486-linux-gnu
 /usr/include/c++/4.6/backward
End of search list.
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/lib/clang/3.1/include
 /usr/local/include
 /usr/include
 /usr/include/linux
 /usr/include/c++/4.6
 /usr/include/c++/4.6/i486-linux-gnu
 /usr/include/c++/4.6/backward
End of search list.
[DEBUG][alg/InitParseConsumer.h - line 27] +decl, size = 1
[DEBUG][alg/InitParseConsumer.h - line 27] +decl, size = 2
_init.cpp:25:13: error: expected ';' at end of declaration
        POINT po{1,2};
                ^
                ;    
[DEBUG][alg/InitParseConsumer.h - line 27] +decl, size = 3
[DEBUG][alg/FlattenCFG/FlattenCFGTransformer.cpp - line 30] enter FuncDecl
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Function
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Var
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 26]  ---- name = a | type = int [2] | desugared type = int [2] | const = 0 | extern = 0 | POD = 1
{ 1, 2 }[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Var
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 26]  ---- name = b | type = _Bool | desugared type = _Bool | const = 0 | extern = 0 | POD = 1
2[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Var
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 26]  ---- name = c | type = std::string | desugared type = class std::basic_string<char> | const = 0 | extern = 0 | POD = 0
"y"[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Var
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 26]  ---- name = d | type = std::string | desugared type = class std::basic_string<char> | const = 0 | extern = 0 | POD = 0
"yy"[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 17] decl: Var
[DEBUG][alg/FlattenCFG/VarRenamer.cpp - line 26]  ---- name = e | type = std::string | desugared type = class std::basic_string<char> | const = 0 | extern = 0 | POD = 0
____localvar____2[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt CompoundStmt ( a7c81d8 -> p 0 )
(CompoundStmt 0xa7c81d8
  (DeclStmt 0xa7c7a78
    0xa7c79b0 "int ____localvar____0[2] =
      (InitListExpr 0xa7c7a40 'int [2]'
        (IntegerLiteral 0xa7c79e0 'int' 1)
        (IntegerLiteral 0xa7c79f8 'int' 2))")
  (DeclStmt 0xa7c7b08
    0xa7c7a90 "bool ____localvar____1 =
      (ImplicitCastExpr 0xa7c7af8 '_Bool' <IntegralToBoolean>
        (IntegerLiteral 0xa7c7ac0 'int' 2))")
  (DeclStmt 0xa7c7ee0
    0xa7c7b60 "std::string ____localvar____2 =
      (ExprWithCleanups 0xa7c7ed0 'std::string':'class std::basic_string<char>'
        (CXXConstructExpr 0xa7c7ea8 'std::string':'class std::basic_string<char>''void (const char *, const class std::allocator<char> &)'
          (ImplicitCastExpr 0xa7c7c18 'const char *' <ArrayToPointerDecay>
            (StringLiteral 0xa7c7bd0 'const char [2]' lvalue "y"))
          (CXXDefaultArgExpr 0xa7c7e90 'const class std::allocator<char>':'const class std::allocator<char>' lvalue)))")
  (DeclStmt 0xa7c81c8
    0xa7c7f30 "std::string ____localvar____3 =
      (ExprWithCleanups 0xa7c811c 'std::string':'class std::basic_string<char>'
        (CXXConstructExpr 0xa7c80f8 'std::string':'class std::basic_string<char>''void (const class std::basic_string<char> &)' elidable
          (MaterializeTemporaryExpr 0xa7c80e8 'const class std::basic_string<char>' lvalue
            (ImplicitCastExpr 0xa7c80d8 'const class std::basic_string<char>' <NoOp>
              (CXXBindTemporaryExpr 0xa7c80c8 'std::string':'class std::basic_string<char>' (CXXTemporary 0xa7c80c0)
                (ImplicitCastExpr 0xa7c80b0 'std::string':'class std::basic_string<char>' <ConstructorConversion>
                  (CXXConstructExpr 0xa7c8088 'std::string':'class std::basic_string<char>''void (const char *, const class std::allocator<char> &)'
                    (ImplicitCastExpr 0xa7c7fc8 'const char *' <ArrayToPointerDecay>
                      (StringLiteral 0xa7c7fa0 'const char [3]' lvalue "yy"))
                    (CXXDefaultArgExpr 0xa7c8070 'const class std::allocator<char>':'const class std::allocator<char>' lvalue))))))))"
    0xa7c8140 "std::string ____localvar____4 =
      (CXXConstructExpr 0xa7c8198 'std::string':'class std::basic_string<char>''void (const class std::basic_string<char> &)'
        (ImplicitCastExpr 0xa7c8188 'const class std::basic_string<char>' lvalue <NoOp>
          (DeclRefExpr 0xa7c8170 'std::string':'class std::basic_string<char>' lvalue Var 0xa7c7b60 '____localvar____2' 'std::string':'class std::basic_string<char>')))"))
{
    int ____localvar____0[2] = { 1, 2 };
    bool ____localvar____1(2);
    std::string ____localvar____2("y");
    std::string ____localvar____3 = "yy", ____localvar____4 = ____localvar____2;
}
;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt DeclStmt ( a7c7a78 -> p a7c81d8 )
(DeclStmt 0xa7c7a78
  0xa7c79b0 "int ____localvar____0[2] =
    (InitListExpr 0xa7c7a40 'int [2]'
      (IntegerLiteral 0xa7c79e0 'int' 1)
      (IntegerLiteral 0xa7c79f8 'int' 2))")
int ____localvar____0[2] = { 1, 2 };
;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 94] isArrayType
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt InitListExpr ( a7c7a40 -> p a7c7a78 )
(InitListExpr 0xa7c7a40 'int [2]'
  (IntegerLiteral 0xa7c79e0 'int' 1)
  (IntegerLiteral 0xa7c79f8 'int' 2))
{ 1, 2 };
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt IntegerLiteral ( a7c79e0 -> p a7c7a40 )
(IntegerLiteral 0xa7c79e0 'int' 1)
1;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt IntegerLiteral ( a7c79f8 -> p a7c7a40 )
(IntegerLiteral 0xa7c79f8 'int' 2)
2;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt DeclStmt ( a7c7b08 -> p a7c81d8 )
(DeclStmt 0xa7c7b08
  0xa7c7a90 "bool ____localvar____1 =
    (ImplicitCastExpr 0xa7c7af8 '_Bool' <IntegralToBoolean>
      (IntegerLiteral 0xa7c7ac0 'int' 2))")
bool ____localvar____1(2);
;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 105] initStyle 1
[DEBUG][alg/FlattenCFG/../Algorithm.h - line 91] --- ASSIGN EXPR BEGIN ---
[DEBUG][alg/FlattenCFG/../Algorithm.h - line 97] --- DECLREF END ---
[DEBUG][alg/FlattenCFG/../Algorithm.h - line 102] --- ASSIGN EXPR END ---
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 127] appended to comma expr
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 133] added to beginning decl
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 26] Stmt DeclStmt ( a7c7ee0 -> p a7c81d8 )
(DeclStmt 0xa7c7ee0
  0xa7c7b60 "std::string ____localvar____2 =
    (ExprWithCleanups 0xa7c7ed0 'std::string':'class std::basic_string<char>'
      (CXXConstructExpr 0xa7c7ea8 'std::string':'class std::basic_string<char>''void (const char *, const class std::allocator<char> &)'
        (ImplicitCastExpr 0xa7c7c18 'const char *' <ArrayToPointerDecay>
          (StringLiteral 0xa7c7bd0 'const char [2]' lvalue "y"))
        (CXXDefaultArgExpr 0xa7c7e90 'const class std::allocator<char>':'const class std::allocator<char>' lvalue)))")
std::string ____localvar____2("y");
;
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 99] notPODType
[DEBUG][alg/FlattenCFG/MoveLocalDeclToTop.cpp - line 105] initStyle 1
